refactor java to remove editor and java dependencies